--- a/ChronoKeep/UI/Timing/ManualEntryWindow.xaml
+++ b/ChronoKeep/UI/Timing/ManualEntryWindow.xaml
@@ -15,19 +15,19 @@
     <Grid>
         <StackPanel VerticalAlignment="Center">
             <DockPanel>
-                <TextBlock Text="Bib" Margin="10,10,0,10" FontSize="16" Width="80" TextAlignment="Right" VerticalAlignment="Center"/>
+                <Label Content="Bib" Margin="10,10,0,10" FontSize="16" Width="80" HorizontalContentAlignment="Right" VerticalAlignment="Center"/>
                 <TextBox Name="BibBox" FontSize="16" Margin="5,10,10,10" TextWrapping="Wrap" KeyUp="Enter_KeyDown" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
             </DockPanel>
             <DockPanel>
-                <TextBlock Text="Time" Margin="10,10,0,10" FontSize="16" Width="80" TextAlignment="Right" VerticalAlignment="Center"/>
+                <Label Content="Time" Margin="10,10,0,10" FontSize="16" Width="80" HorizontalContentAlignment="Right" VerticalAlignment="Center"/>
                 <xctk:MaskedTextBox Name="TimeBox" ValueDataType="{x:Type s:String}" Mask="00:00:00.000" FontSize="16" Margin="5,10,10,10" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" KeyUp="Enter_KeyDown" Height="35"/>
             </DockPanel>
             <DockPanel Name="DatePanel" Visibility="Collapsed">
-                <TextBlock Text="Date" Margin="10,10,0,10" FontSize="16" Width="80" TextAlignment="Right" VerticalAlignment="Center"/>
+                <Label Content="Date" Margin="10,10,0,10" FontSize="16" Width="80" HorizontalContentAlignment="Right" VerticalAlignment="Center"/>
                 <DatePicker Name="DateBox" FontSize="16" Margin="5,10,10,10"/>
             </DockPanel>
             <DockPanel x:Name="LocationPanel">
-                <TextBlock Text="Location" Margin="10,10,0,10" FontSize="16" Width="80" TextAlignment="Right" VerticalAlignment="Center"/>
+                <Label Content="Location" Margin="10,10,0,10" FontSize="16" Width="80" HorizontalContentAlignment="Right" VerticalAlignment="Center"/>
                 <ComboBox Name="LocationBox" FontSize="16" Margin="5,10,10,10"/>
             </DockPanel>
             <RadioButton Name="NetTimeButton" Content="Net Time" GroupName="TimeGroup" Margin="95,5,0,0" FontSize="14" VerticalContentAlignment="Center"/>
