--- a/ChronoKeep/UI/API/APIPage2.xaml
+++ b/ChronoKeep/UI/API/APIPage2.xaml
@@ -4,22 +4,19 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Chronokeep.UI.API"
-      
       mc:Ignorable="d" 
       d:DesignHeight="450"
       d:DesignWidth="300"
       Title="APIPage2"
-      Foreground="{DynamicResource TextFillColorPrimaryBrush}"
       >
     <StackPanel VerticalAlignment="Center">
-        <TextBlock
+        <Label
             Name="holdingLabel" 
-            Text="Retrieving Events, Please Hold."
+            Content="Retrieving Events, Please Hold."
             FontSize="18" 
             VerticalAlignment="Center"
             MaxWidth="250"
-            HorizontalAlignment="Center" 
-            TextWrapping="Wrap" 
+            HorizontalAlignment="Center"
             Visibility="Visible"
             Margin="0,10,0,0"
             />
@@ -30,8 +27,8 @@
             Visibility="Collapsed"
             Margin="5,0"
             >
-            <TextBlock
-                Text="Select Event to link to:"
+            <Label
+                Content="Select Event to link to:"
                 FontSize="16"
                 VerticalAlignment="Center"
                 HorizontalAlignment="Center"
@@ -48,20 +45,20 @@
                 x:Name="newPanel" 
                 Visibility="Collapsed"
                 >
-                <TextBlock 
-                    Text="New Event:" 
+                <Label 
+                    Content="New Event:" 
                     FontSize="16"
                     VerticalAlignment="Center" 
                     HorizontalAlignment="Center"
                     Margin="0,0,0,5"
                     />
                 <DockPanel Margin="0,0,0,5">
-                    <TextBlock
-                        Text="Name"
+                    <Label
+                        Content="Name"
                         FontSize="15"
                         Width="100"
                         VerticalAlignment="Center"
-                        TextAlignment="Right"
+                        HorizontalContentAlignment="Right"
                         Padding="0,0,5,0"
                         />
                     <TextBox
@@ -73,12 +70,12 @@
                         />
                 </DockPanel>
                 <DockPanel Margin="0,0,0,5">
-                    <TextBlock
-                        Text="Cert Name"
+                    <Label
+                        Content="Cert Name"
                         FontSize="15"
                         Width="100"
                         VerticalAlignment="Center"
-                        TextAlignment="Right"
+                        HorizontalContentAlignment="Right"
                         Padding="0,0,5,0"
                         />
                     <TextBox
@@ -90,12 +87,12 @@
                         />
                 </DockPanel>
                 <DockPanel Margin="0,0,0,5">
-                    <TextBlock
-                        Text="Slug" 
+                    <Label
+                        Content="Slug" 
                         FontSize="15"
                         Width="100"
                         VerticalAlignment="Center"
-                        TextAlignment="Right"
+                        HorizontalContentAlignment="Right"
                         Padding="0,0,5,0"
                         />
                     <TextBox
@@ -107,12 +104,12 @@
                         />
                 </DockPanel>
                 <DockPanel Margin="0,0,0,5">
-                    <TextBlock
-                        Text="Contact Email"
+                    <Label
+                        Content="Contact Email"
                         FontSize="15"
                         Width="100"
                         VerticalAlignment="Center" 
-                        TextAlignment="Right"
+                        HorizontalContentAlignment="Right"
                         Padding="0,0,5,0"
                         />
                     <TextBox 
@@ -124,12 +121,12 @@
                         />
                 </DockPanel>
                 <DockPanel Margin="0,0,0,5" Visibility="Collapsed">
-                    <TextBlock
-                        Text="Website URL"
+                    <Label
+                        Content="Website URL"
                         FontSize="15"
                         Width="100"
                         VerticalAlignment="Center" 
-                        TextAlignment="Right"
+                        HorizontalContentAlignment="Right"
                         Padding="0,0,5,0"
                         />
                     <TextBox 
@@ -141,12 +138,12 @@
                         />
                 </DockPanel>
                 <DockPanel Margin="0,0,0,5" Visibility="Collapsed">
-                    <TextBlock
-                        Text="Image URL"
+                    <Label
+                        Content="Image URL"
                         FontSize="15"
                         Width="100"
                         VerticalAlignment="Center" 
-                        TextAlignment="Right"
+                        HorizontalContentAlignment="Right"
                         Padding="0,0,5,0"
                         />
                     <TextBox 
