--- a/ChronoKeep/UI/ChipAssignment/BibChipAssociationWindow.xaml
+++ b/ChronoKeep/UI/ChipAssignment/BibChipAssociationWindow.xaml
@@ -19,7 +19,7 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <StackPanel Name="EventHolder" Grid.Row="0">
-                <TextBlock Text="Please choose an event:" FontSize="18" Margin="10,10,20,0" TextAlignment="Center" />
+                <Label Content="Please choose an event:" FontSize="18" Margin="10,10,20,0" HorizontalContentAlignment="Center" />
                 <DockPanel>
                     <ComboBox x:Name="events" Margin="0,0,0,0" Width="350" Height="25" />
                 </DockPanel>
@@ -48,13 +48,13 @@
                     Visibility="Collapsed"
                     HorizontalAlignment="Center"
                     >
-                    <TextBlock 
+                    <Label 
                         x:Name="SheetsLabel"
                         FontSize="16"
                         Margin="5,0,0,0" 
-                        Text="Sheet"
+                        Content="Sheet"
                         VerticalAlignment="Center"
-                        TextAlignment="Right"
+                        HorizontalContentAlignment="Right"
                         />
                     <ComboBox
                         x:Name="SheetsBox"
