--- a/ChronoKeep/UI/EventWindows/NewEventWindow.xaml
+++ b/ChronoKeep/UI/EventWindows/NewEventWindow.xaml
@@ -15,15 +15,15 @@
     <Grid>
         <StackPanel Margin="5">
             <DockPanel Margin="10,0,10,0">
-                <TextBlock Text="Name" Margin="10,10,5,10" FontSize="16" Width="75" TextAlignment="Right" VerticalAlignment="Center"/>
+                <Label Content="Name" Margin="10,10,5,10" FontSize="16" Width="75" HorizontalContentAlignment="Right" VerticalAlignment="Center"/>
                 <TextBox x:Name="nameBox" FontSize="16" Margin="5,10,10,10" TextWrapping="Wrap" KeyUp="Keyboard_Up" />
             </DockPanel>
             <DockPanel Margin="10,0,10,0">
-                <TextBlock Text="Year Code" Margin="10,10,5,10" FontSize="16" Width="75" TextAlignment="Right" VerticalAlignment="Center"/>
+                <Label Content="Year Code" Margin="10,10,5,10" FontSize="16" Width="75" HorizontalContentAlignment="Right" VerticalAlignment="Center"/>
                 <TextBox x:Name="yearCodeBox" FontSize="16" Margin="5,10,10,10" KeyUp="Keyboard_Up"/>
             </DockPanel>
             <DockPanel Margin="10,0,10,0">
-                <TextBlock Text="Date" Margin="10,10,5,10" FontSize="16" Width="75" TextAlignment="Right" VerticalAlignment="Center"/>
+                <Label Content="Date" Margin="10,10,5,10" FontSize="16" Width="75" HorizontalContentAlignment="Right" VerticalAlignment="Center"/>
                 <DatePicker x:Name="datePicker" Margin="5,10,10,10" KeyUp="Keyboard_Up" FontSize="16"/>
             </DockPanel>
             <ComboBox Name="oldEvent" FontSize="16" Margin="20,10,20,10"/>
