--- a/ChronoKeep/UI/Export/ExportDistanceResults.xaml
+++ b/ChronoKeep/UI/Export/ExportDistanceResults.xaml
@@ -16,7 +16,7 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="55"/>
             </Grid.RowDefinitions>
-            <TextBlock Text="Distance to Export" FontSize="16" VerticalAlignment="Center" TextAlignment="Center" Grid.Row="0" Margin="0,0,0,0"/>
+            <Label Content="Distance to Export" FontSize="16" VerticalAlignment="Center" HorizontalContentAlignment="Center" Grid.Row="0" Margin="0,0,0,0"/>
             <ComboBox Name="distanceBox" VerticalAlignment="Center" Grid.Row="1" Margin="20,20,20,20" />
             <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
