--- a/ChronoKeep/UI/Export/ExportResults.xaml
+++ b/ChronoKeep/UI/Export/ExportResults.xaml
@@ -16,7 +16,7 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="55"/>
             </Grid.RowDefinitions>
-            <TextBlock Text="Content to Export" FontSize="16" VerticalAlignment="Center" TextAlignment="Center" Grid.Row="0" Margin="0,-15,0,0"/>
+            <Label Content="Content to Export" FontSize="16" VerticalAlignment="Center" HorizontalContentAlignment="Center" Grid.Row="0" Margin="0,-15,0,0"/>
             <ListBox Name="headersList" Margin="5,0,5,5" BorderThickness="0" Grid.Row="1"/>
             <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
