--- a/ChronoKeep/UI/Import/ImportFilePageConflicts.xaml
+++ b/ChronoKeep/UI/Import/ImportFilePageConflicts.xaml
@@ -4,12 +4,10 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Chronokeep.UI.Import"
-      
       mc:Ignorable="d" 
       d:DesignHeight="450"
       d:DesignWidth="400"
       Title="ImportPageMultiples"
-      Foreground="{DynamicResource TextFillColorPrimaryBrush}"
       >
     <Grid>
         <Grid.RowDefinitions>
@@ -17,7 +15,7 @@
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
         <StackPanel>
-            <TextBlock Text="Select entries to keep." FontSize="16" Margin="0,0,0,5" Grid.Row="0" VerticalAlignment="Center" TextAlignment="Center"/>
+            <Label Content="Select entries to keep." FontSize="16" Margin="0,0,0,5" Grid.Row="0" VerticalAlignment="Center" HorizontalContentAlignment="Center"/>
             <Grid Margin="10,5">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="50"/>
@@ -28,12 +26,12 @@
                     <ColumnDefinition Width="50"/>
                     <ColumnDefinition Width="50"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock Text="Old" Grid.Column="1"/>
-                <TextBlock Text="Bib" Grid.Column="2"/>
-                <TextBlock Text="Div" Grid.Column="3"/>
-                <TextBlock Text="Name" Grid.Column="4"/>
-                <TextBlock Text="Gender" Grid.Column="5"/>
-                <TextBlock Text="Age" Grid.Column="6"/>
+                <Label Content="Old" Grid.Column="1"/>
+                <Label Content="Bib" Grid.Column="2"/>
+                <Label Content="Div" Grid.Column="3"/>
+                <Label Content="Name" Grid.Column="4"/>
+                <Label Content="Gender" Grid.Column="5"/>
+                <Label Content="Age" Grid.Column="6"/>
             </Grid>
         </StackPanel>
         <ListBox x:Name="multiplesListBox" KeyboardNavigation.TabNavigation="Continue" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" IsTabStop="False" Grid.Row="1">
