--- a/ChronoKeep/UI/MainPages/AgeGroupsPage.xaml
+++ b/ChronoKeep/UI/MainPages/AgeGroupsPage.xaml
@@ -4,16 +4,13 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:Chronokeep.UI.MainPages"
-      
       mc:Ignorable="d"
       d:DesignHeight="450"
       d:DesignWidth="800"
       Title="AgeGroupsPage"
-      Foreground="{DynamicResource TextFillColorPrimaryBrush}"
       >
-
     <Grid>
-        <TextBlock Name="nothing" Text="Event not set. Please choose an event before selecting this option." Visibility="Collapsed" />
+        <Label Name="nothing" Content="Event not set. Please choose an event before selecting this option." Visibility="Collapsed" />
         <Grid Name="everything">
             <Grid.RowDefinitions>
                 <RowDefinition Height="0" Name="DistanceRow"/>
@@ -25,7 +22,16 @@
                 <ColumnDefinition Width="150"/>
             </Grid.ColumnDefinitions>
             <ComboBox Name="Distances" FontSize="16" Margin="10,10,10,10" Height="35" Width="250" SelectionChanged="Distances_SelectionChanged" VerticalContentAlignment="Center"/>
-            <ListBox Name="AgeGroupsBox" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Center" KeyboardNavigation.TabNavigation="Continue" Grid.Row="1" ScrollViewer.CanContentScroll="False" PreviewMouseWheel="AgeGroupsBox_PreviewMouseWheel">
+            <ListBox
+                Name="AgeGroupsBox"
+                HorizontalContentAlignment="Stretch"
+                VerticalContentAlignment="Center"
+                KeyboardNavigation.TabNavigation="Continue"
+                Grid.Row="1"
+                ScrollViewer.CanContentScroll="False"
+                PreviewMouseWheel="AgeGroupsBox_PreviewMouseWheel"
+                Background="Transparent"
+                >
                 <ListBox.ItemContainerStyle>
                     <Style TargetType="ListBoxItem">
                         <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
