--- a/ChronoKeep/UI/MainPages/TimingPage.xaml
+++ b/ChronoKeep/UI/MainPages/TimingPage.xaml
@@ -10,7 +10,6 @@
         d:DesignWidth="1000"
         Title="TimingPage"
         Loaded="Page_Loaded"
-        Foreground="{DynamicResource TextFillColorPrimaryBrush}"
         >
     <Grid>
         <Grid.RowDefinitions>
@@ -26,61 +25,61 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             <StackPanel Grid.Row="0">
-                <TextBlock
-                        Name="EllapsedTime"
-                        Text="00:00:00"
-                        TextAlignment="Center"
-                        Margin="0,0,10,0"
-                        FontWeight="Bold"
-                        FontSize="40"
-                        />
+                <Label
+                    Name="EllapsedTime"
+                    Content="00:00:00"
+                    HorizontalContentAlignment="Center"
+                    Margin="0,0,10,0"
+                    FontWeight="Bold"
+                    FontSize="40"
+                    />
                 <ComboBox
-                        Name="EllapsedRelativeToBox"
-                        Margin="0,0,0,5"
-                        Width="250"
-                        Height="35"
-                        HorizontalAlignment="Stretch"
-                        SelectionChanged="EllapsedRelativeToBox_SelectionChanged"
-                        Visibility="Collapsed" />
+                    Name="EllapsedRelativeToBox"
+                    Margin="0,0,0,5"
+                    Width="250"
+                    Height="35"
+                    HorizontalAlignment="Stretch"
+                    SelectionChanged="EllapsedRelativeToBox_SelectionChanged"
+                    Visibility="Collapsed" />
                 <StackPanel
-                        Orientation="Horizontal"
-                        Width="200"
-                        HorizontalAlignment="Center"
-                        >
-                    <TextBlock
-                            Name="StartTimeLabel"
-                            Text="Start Time"
-                            FontSize="14"
-                            Width="65"
-                            VerticalAlignment="Center"
-                            TextAlignment="Right"
-                            Margin="0,0,10,0"
-                            />
+                    Orientation="Horizontal"
+                    Width="200"
+                    HorizontalAlignment="Center"
+                    >
+                    <Label
+                        Name="StartTimeLabel"
+                        Content="Start Time"
+                        FontSize="14"
+                        Width="65"
+                        VerticalAlignment="Center"
+                        HorizontalContentAlignment="Right"
+                        Margin="0,0,10,0"
+                        />
                     <xctk:MaskedTextBox
-                            Name="StartTime"
-                            ValueDataType="{x:Type s:String}"
-                            Mask="00:00:00.000"
-                            Width="125"
-                            Height="30"
-                            VerticalAlignment="Center"
-                            VerticalContentAlignment="Center"
-                            HorizontalContentAlignment="Center"
-                            FontWeight="Bold"
-                            FontSize="16"
-                            KeyDown="StartTimeKeyDown"
-                            LostFocus="StartTimeLostFocus"
-                            />
+                        Name="StartTime"
+                        ValueDataType="{x:Type s:String}"
+                        Mask="00:00:00.000"
+                        Width="125"
+                        Height="30"
+                        VerticalAlignment="Center"
+                        VerticalContentAlignment="Center"
+                        HorizontalContentAlignment="Center"
+                        FontWeight="Bold"
+                        FontSize="16"
+                        KeyDown="StartTimeKeyDown"
+                        LostFocus="StartTimeLostFocus"
+                        />
                 </StackPanel>
                 <Button
-                        Name="StartRace"
-                        Content="Start Race"
-                        Width="250"
-                        Height="35"
-                        HorizontalAlignment="Center"
-                        HorizontalContentAlignment="Center"
-                        Margin="0,5,0,0"
-                        Click="StartRaceClick"
-                        />
+                    Name="StartRace"
+                    Content="Start Race"
+                    Width="250"
+                    Height="35"
+                    HorizontalAlignment="Center"
+                    HorizontalContentAlignment="Center"
+                    Margin="0,5,0,0"
+                    Click="StartRaceClick"
+                    />
             </StackPanel>
             <ScrollViewer
                 Grid.Row="1"
@@ -220,45 +219,45 @@
                                     <ColumnDefinition Width="35" />
                                     <ColumnDefinition Width="35" />
                                 </Grid.ColumnDefinitions>
-                                <TextBlock 
+                                <Label 
                                     Grid.Column="0"
                                     Margin="2,4"
-                                    Text="Distance"
+                                    Content="Distance"
                                     FontSize="12"
                                     VerticalAlignment="Center"
                                     />
-                                <TextBlock
+                                <Label
                                     Grid.Column="1"
                                     Margin="2,4"
-                                    Text="DNS"
+                                    Content="DNS"
                                     FontSize="12"
                                     VerticalAlignment="Center"
                                     />
-                                <TextBlock 
+                                <Label 
                                     Grid.Column="2"
                                     Margin="2,4"
-                                    Text="DNF"
+                                    Content="DNF"
                                     FontSize="12"
                                     VerticalAlignment="Center"
                                     />
-                                <TextBlock 
+                                <Label 
                                     Grid.Column="3"
                                     Margin="2,4"
-                                    Text="Fin"
+                                    Content="Fin"
                                     FontSize="12"
                                     VerticalAlignment="Center"
                                     />
-                                <TextBlock 
+                                <Label 
                                     Grid.Column="4"
                                     Margin="2,4"
-                                    Text="Act"
+                                    Content="Act"
                                     FontSize="12"
                                     VerticalAlignment="Center"
                                     />
-                                <TextBlock
+                                <Label
                                     Grid.Column="5"
                                     Margin="2,4"
-                                    Text="Tot"
+                                    Content="Tot"
                                     FontSize="12" 
                                     VerticalAlignment="Center"
                                     />
@@ -285,45 +284,45 @@
                                                 <ColumnDefinition Width="35" />
                                                 <ColumnDefinition Width="35" />
                                             </Grid.ColumnDefinitions>
-                                            <TextBlock
+                                            <Label
                                                 Grid.Column="0"
                                                 Margin="2,4" 
-                                                Text="{Binding DistanceName}"
+                                                Content="{Binding DistanceName}"
                                                 FontSize="12"
                                                 VerticalAlignment="Center"
                                                 />
-                                            <TextBlock 
+                                            <Label 
                                                 Grid.Column="1"
                                                 Margin="2,4"
-                                                Text="{Binding DNS}" 
+                                                Content="{Binding DNS}" 
                                                 FontSize="12" 
                                                 VerticalAlignment="Center"
                                                 />
-                                            <TextBlock
+                                            <Label
                                                 Grid.Column="2"
                                                 Margin="2,4"
-                                                Text="{Binding DNF}"
+                                                Content="{Binding DNF}"
                                                 FontSize="12"
                                                 VerticalAlignment="Center"
                                                 />
-                                            <TextBlock 
+                                            <Label 
                                                 Grid.Column="3"
                                                 Margin="2,4"
-                                                Text="{Binding Finished}"
+                                                Content="{Binding Finished}"
                                                 FontSize="12"
                                                 VerticalAlignment="Center"
                                                 />
-                                            <TextBlock 
+                                            <Label 
                                                 Grid.Column="4"
                                                 Margin="2,4"
-                                                Text="{Binding Active}"
+                                                Content="{Binding Active}"
                                                 FontSize="12" 
                                                 VerticalAlignment="Center"
                                                 />
-                                            <TextBlock 
+                                            <Label 
                                                 Grid.Column="5"
                                                 Margin="2,4"
-                                                Text="{Binding Total}"
+                                                Content="{Binding Total}"
                                                 FontSize="12" 
                                                 VerticalAlignment="Center"/>
                                         </Grid>
@@ -481,20 +480,20 @@
                                 HorizontalAlignment="Center"
                                 Margin="0,10,0,0"
                                 >
-                                <TextBlock
-                                    Text="IP:"
+                                <Label
+                                    Content="IP:"
                                     Width="75"
                                     VerticalAlignment="Center"
-                                    TextAlignment="Right" 
+                                    HorizontalContentAlignment="Right" 
                                     Margin="5,0"
                                     FontSize="16"
                                     />
-                                <TextBlock 
+                                <Label 
                                     Name="IPAdd"
                                     Width="150" 
-                                    Text="IP" 
+                                    Content="IP" 
                                     VerticalAlignment="Center"
-                                    TextAlignment="Left" 
+                                    HorizontalContentAlignment="Left" 
                                     Margin="5,0"
                                     FontSize="16"
                                     />
@@ -504,20 +503,20 @@
                                 Visibility="Collapsed"
                                 HorizontalAlignment="Center"
                                 >
-                                <TextBlock
-                                    Text="Port:"
+                                <Label
+                                    Content="Port:"
                                     Width="75"
                                     VerticalAlignment="Center"
-                                    TextAlignment="Right"
+                                    HorizontalContentAlignment="Right"
                                     Margin="5,0"
                                     FontSize="16"
                                     />
-                                <TextBlock
+                                <Label
                                     Name="Port"
                                     Width="150"
-                                    Text="Port"
+                                    Content="Port"
                                     VerticalAlignment="Center" 
-                                    TextAlignment="Left" 
+                                    HorizontalContentAlignment="Left" 
                                     Margin="5,0"
                                     FontSize="16"
                                     />
@@ -548,8 +547,8 @@
                         LastChildFill="False"
                         VerticalAlignment="Center"
                         >
-                        <TextBlock
-                            Text="Readers"
+                        <Label
+                            Content="Readers"
                             Margin="5,0,0,0"
                             VerticalAlignment="Center"
                             />
@@ -576,13 +575,13 @@
                             Click="ReaderMessageButton_Click"
                             Visibility="Collapsed"
                             >
-                            <TextBlock
+                            <Label
                                 x:Name="ReaderMessageNumberBox"
                                 Background="{DynamicResource SystemFillColorCriticalBrush}"
-                                Text="0"
+                                Content="0"
                                 />
                         </CheckBox>
-                        <TextBlock 
+                        <Label 
                             x:Name="remoteErrorsBlock"
                             Margin="0,0,5,0"
                             VerticalAlignment="Center"
@@ -594,9 +593,9 @@
                     Name="ReadersBox" 
                     HorizontalAlignment="Stretch"
                     KeyboardNavigation.TabNavigation="Continue"
-                    Height="170"
                     ScrollViewer.CanContentScroll="false"
                     ScrollViewer.VerticalScrollBarVisibility="Visible"
+                    Background="Transparent"
                     >
                     <ListBox.ItemContainerStyle>
                         <Style TargetType="ListBoxItem">
