--- a/ChronoKeep/UI/Timing/AlarmsPage.xaml
+++ b/ChronoKeep/UI/Timing/AlarmsPage.xaml
@@ -4,12 +4,10 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Chronokeep.UI.Timing"
-      
       mc:Ignorable="d" 
       d:DesignHeight="600"
       d:DesignWidth="800"
       Title="AwardPage"
-      Foreground="{DynamicResource TextFillColorPrimaryBrush}"
       >
     <Grid>
         <Grid.RowDefinitions>
@@ -25,10 +23,10 @@
                 <ColumnDefinition Width="55" />
                 <ColumnDefinition Width="45" />
             </Grid.ColumnDefinitions>
-            <TextBlock Text="Bib" Margin="5,5,5,0" HorizontalAlignment="Center" Grid.Column="0" />
-            <TextBlock Text="Chip" Margin="5,5,5,0" HorizontalAlignment="Center" Grid.Column="1" />
-            <TextBlock Text="Sound" Margin="5,5,5,0" HorizontalAlignment="Center" Grid.Column="2" />
-            <TextBlock Text="Active" Margin="5,5,5,0" HorizontalAlignment="Center" Grid.Column="3" />
+            <Label Content="Bib" Margin="5,5,5,0" HorizontalAlignment="Center" Grid.Column="0" />
+            <Label Content="Chip" Margin="5,5,5,0" HorizontalAlignment="Center" Grid.Column="1" />
+            <Label Content="Sound" Margin="5,5,5,0" HorizontalAlignment="Center" Grid.Column="2" />
+            <Label Content="Active" Margin="5,5,5,0" HorizontalAlignment="Center" Grid.Column="3" />
         </Grid>
         <ListBox
             Name="AlarmsBox"
