--- a/ChronoKeep/UI/Timing/AwardPage.xaml
+++ b/ChronoKeep/UI/Timing/AwardPage.xaml
@@ -4,12 +4,10 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Chronokeep.UI.Timing"
-      
       mc:Ignorable="d" 
       d:DesignHeight="600"
       d:DesignWidth="800"
       Title="AwardPage"
-      Foreground="{DynamicResource TextFillColorPrimaryBrush}"
       >
     <Grid>
         <Grid.RowDefinitions>
@@ -18,24 +16,24 @@
         </Grid.RowDefinitions>
         <ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Grid.Row="0">
             <StackPanel HorizontalAlignment="Center">
-                <TextBlock Text="Distances" FontSize="16" HorizontalAlignment="Center" />
+                <Label Content="Distances" FontSize="16" HorizontalAlignment="Center" />
                 <ListBox Name="DistancesBox" Height="Auto" FontSize="12" SelectionMode="Extended">
                     <ListBoxItem Content="All" IsSelected="True"/>
                 </ListBox>
-                <TextBlock Text="Overall" FontSize="16" HorizontalAlignment="Center" Margin="0,5"/>
+                <Label Content="Overall" FontSize="16" HorizontalAlignment="Center" Margin="0,5"/>
                 <DockPanel HorizontalAlignment="Left" Margin="0,0,0,5">
                     <CheckBox Content="Print" FontSize="12" Name="overallYes" IsChecked="True" VerticalAlignment="Center" Margin="0,0,13,0"/>
                     <TextBox Text="3" Name="overallNumberParticipants" Width="40" Height="35" PreviewTextInput="IsNumber" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center"/>
                 </DockPanel>
                 <CheckBox Content="Exclude winners from Age Group awards." Name="overallExcludeAG" IsChecked="False" Margin="0,0,0,5"/>
                 <CheckBox Content="Exclude winners from Custom awards." Name="overallExcludeCustom" IsChecked="False" Margin="0,0,0,5"/>
-                <TextBlock Text="Age Groups" FontSize="16" HorizontalAlignment="Center" Margin="0,0,0,5"/>
+                <Label Content="Age Groups" FontSize="16" HorizontalAlignment="Center" Margin="0,0,0,5"/>
                 <DockPanel HorizontalAlignment="Left" Margin="0,0,0,5">
                     <CheckBox Content="Print" FontSize="12" Name="agYes" IsChecked="True" VerticalAlignment="Center" Margin="0,0,13,0"/>
                     <TextBox Text="3" Name="agNumberParticipants" Width="40" Height="35" PreviewTextInput="IsNumber" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center"/>
                 </DockPanel>
                 <CheckBox Content="Exclude winners from Custom awards." Name="agExcludeCustom" IsChecked="False" Margin="0,0,0,5"/>
-                <TextBlock Text="Custom" FontSize="16" HorizontalAlignment="Center" Margin="0,0,0,5"/>
+                <Label Content="Custom" FontSize="16" HorizontalAlignment="Center" Margin="0,0,0,5"/>
                 <DockPanel HorizontalAlignment="Left" Margin="0,0,0,5">
                     <CheckBox Content="Print" FontSize="12" Name="customYes" IsChecked="True" VerticalAlignment="Center" Margin="0,0,13,0"/>
                     <TextBox Text="3" Name="customNumberParticipants" Width="40" Height="35" PreviewTextInput="IsNumber" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Center"/>
@@ -46,9 +44,9 @@
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Column="0" Margin="4" Text="Start Age" TextAlignment="Center"/>
-                    <TextBlock Grid.Column="1" Margin="4" Text="End Age" TextAlignment="Center"/>
-                    <TextBlock Grid.Column="2" Margin="4" Text="Name" TextAlignment="Center"/>
+                    <Label Grid.Column="0" Margin="4" Content="Start Age" HorizontalContentAlignment="Center"/>
+                    <Label Grid.Column="1" Margin="4" Content="End Age" HorizontalContentAlignment="Center"/>
+                    <Label Grid.Column="2" Margin="4" Content="Name" HorizontalContentAlignment="Center"/>
                 </Grid>
                 <ListView Name="customGroupsListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Extended" FontSize="12" Margin="0,0,0,5">
                     <ListView.ItemTemplate>
@@ -59,9 +57,9 @@
                                     <ColumnDefinition Width="*"/>
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
-                                <TextBlock Grid.Column="0" Margin="4" Text="{Binding StartAge}" TextAlignment="Center"/>
-                                <TextBlock Grid.Column="1" Margin="4" Text="{Binding EndAge}" TextAlignment="Center"/>
-                                <TextBlock Grid.Column="2" Margin="4" Text="{Binding CustomName}" TextAlignment="Center"/>
+                                <Label Grid.Column="0" Margin="4" Content="{Binding StartAge}" HorizontalContentAlignment="Center"/>
+                                <Label Grid.Column="1" Margin="4" Content="{Binding EndAge}" HorizontalContentAlignment="Center"/>
+                                <Label Grid.Column="2" Margin="4" Content="{Binding CustomName}" HorizontalContentAlignment="Center"/>
                             </Grid>
                         </DataTemplate>
                     </ListView.ItemTemplate>
