--- a/ChronoKeep/Updates/DownloadWindow.xaml
+++ b/ChronoKeep/Updates/DownloadWindow.xaml
@@ -12,12 +12,12 @@
     <Grid>
         <StackPanel VerticalAlignment="Center">
             <StackPanel Name="UpdatePanel">
-                <TextBlock Name="DownloadLabel" Text="Update Available" FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                <Label Name="DownloadLabel" Content="Update Available" FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
                 <ProgressBar Name="DownloadProgress" Height="20" Margin="10,0,10,0" />
             </StackPanel>
             <Button x:Name="BackupDatabaseButton" Content="Backup Database" Height="30" Width="170" HorizontalAlignment="Center" Visibility="Collapsed" Margin="0,10,0,0" Click="BackupDatabaseButton_Click"/>
             <ScrollViewer x:Name="BackupPanel" Visibility="Collapsed" Height="100" HorizontalScrollBarVisibility="Disabled" Padding="10" VerticalScrollBarVisibility="Auto">
-                <TextBlock x:Name="backupBlock" TextAlignment="Center" TextWrapping="Wrap"/>
+                <Label x:Name="backupBlock" HorizontalContentAlignment="Center"/>
             </ScrollViewer>
             <DockPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,10,0,10">
                 <Button Name="InstallButton" Content="Download" Height="30" Width="100" Margin="10,0,10,0" Click="InstallButton_Click"/>
